# swissairdry-swissairdry

./: .env.example  .gitignore  .replit  ANWEISUNGEN_FUER_ASSISTENTEN.md  ANWEISUNGEN_FÜR_ASSISTENTEN.md  APK_Anleitung.md  Dockerfile.simple  ESP32C6_Libraries.md  FEHLERBEHEBUNG.md  FEHLERBEHEBUNG_FUER_ASSISTENTEN.md  INSTALLATION_ANWEISUNGEN.md  README.md  SWISSAIRDRY_KOMPLETTANLEITUNG.md  SwissAirDry_D1Mini_OTA_Basic.ino  SwissAirDry_D1Mini_OTA_mit_Display.ino  SwissAirDry_ESP32C6_ColorDisplay.ino  SwissAirDry_ESP32C6_XIAO_ColorDisplay.ino  SwissAirDry_ESP32_OTA_Basic.ino  SwissAirDry_ESP32_OTA_mit_Display.ino  SwissAirDry_ESP32_Simple_OTA.ino  SwissAirDry_ESP8266_OTA.ino  SwissAirDry_Minimal_Config.ino  SwissAirDry_Universal_OTA.ino  SwissAirDry_Universal_OTA_Fixed.ino  SwissAirDry_Webconfig.ino  SwissAirDry_Wemos_D1_Mini.ino  SwissAirDry_Wemos_D1_Mini_Menu.ino  SwissAirDry_Wemos_D1_Mini_QR.ino  SwissAirDry_Wemos_D1_Mini_QR_Alternative.ino  docker-compose.yml  install.sh  nginx.conf  pyproject.toml  replit.nix  swissairdry_komplettpaket.tar  uninstall.sh  vgnc.org.zone
api/: Dockerfile  start_simple.py
attached_assets/: Pasted--Swiss-Air-Dry-APK-Projektbeschreibung-Die-SwissAirDry-App-ist-eine-Android-Anwendung-die-mit--1744569183024.txt  Pasted-FQBN-esp32-esp32-XIAO-ESP32C6-Verwende-das-Board-XIAO-ESP32C6-von-der-Plattform-im-Ordner-C-Us-1745002818252.txt  Pasted-FQBN-esp32-esp32-XIAO-ESP32C6-Verwende-das-Board-XIAO-ESP32C6-von-der-Plattform-im-Ordner-C-Us-1745003889167.txt  (+6 more)
dns/: named.conf  vgnc.org.zone
docker-base-api/: Dockerfile  requirements.txt  (+1 more)
(+253 files in other folders)
